# hycastnavigation

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  recastnavigation.pc.in
DebugUtils/: CMakeLists.txt
DebugUtils/Include/: DebugDraw.h  DetourDebugDraw.h  RecastDebugDraw.h  RecastDump.h
DebugUtils/Source/: DebugDraw.cpp  DetourDebugDraw.cpp  RecastDebugDraw.cpp  RecastDump.cpp
Detour/: CMakeLists.txt
Detour/Include/: DetourAlloc.h  DetourAssert.h  DetourCommon.h  DetourMath.h  DetourNavMesh.h  DetourNavMeshBuilder.h  DetourNavMeshQuery.h  DetourNode.h  DetourStatus.h
Detour/Source/: DetourCommon.cpp  DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp  DetourNode.cpp
DetourTileCache/: CMakeLists.txt
DetourTileCache/Include/: DetourTileCache.h  DetourTileCacheBuilder.h
DetourTileCache/Source/: DetourTileCache.cpp  DetourTileCacheBuilder.cpp
Docs/: _2_BuildingAndIntegrating.md  _99_Roadmap.md
Math/Include/: Vec3.h
Recast/: CMakeLists.txt
Recast/Include/: Recast.h  RecastAlloc.h  RecastAssert.h
Recast/Source/: Recast.cpp  RecastAlloc.cpp  RecastArea.cpp  RecastContour.cpp  RecastFilter.cpp  RecastLayers.cpp  RecastMesh.cpp  RecastMeshDetail.cpp  RecastRasterization.cpp  RecastRegion.cpp
RecastDemo/: CMakeLists.txt  premake5.lua
RecastDemo/Contrib/: CMakeLists.txt
RecastDemo/Include/: AppState.h  InputGeom.h  Sample.h  SampleInterfaces.h  Sample_TileMesh.h  TestCase.h  Tool_NavMeshPrune.h  Tool_NavMeshTester.h  Tool_OffMeshConnection.h  ValueHistory.h
RecastDemo/Source/: AppState.cpp  InputGeom.cpp  Sample.cpp  SampleInterfaces.cpp  Sample_SoloMesh.cpp  Sample_TempObstacles.cpp  Sample_TileMesh.cpp  TestCase.cpp  Tool_ConvexVolume.cpp  Tool_NavMeshPrune.cpp  Tool_NavMeshTester.cpp  Tool_OffMeshConnection.cpp  ValueHistory.cpp  main.cpp
Tests/: CMakeLists.txt
Tests/Detour/: Tests_Detour.cpp
Tests/Recast/: Tests_Alloc.cpp  Tests_Recast.cpp  Tests_RecastFilter.cpp  Tests_RecastRasterization.cpp
